[tool.poetry]
name = "lama"
version = "0.1.0"
description = "Fork lama repo with as python package"
authors = []
readme = "README.md"
packages = [
    { include = "saicinpainting" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
torch = "^2.0.1"
tqdm = "^4.65.0"
easydict = "^1.10"
scikit-learn = "^1.3.0"
torchvision = "^0.15.2"
scikit-image = "^0.21.0"
pytorch-lightning = "^2.0.5"
opencv-python = "^4.8.0.74"
albumentations = "0.5.2"
webdataset = "^0.2.48"
kornia = "0.5.0"
tabulate = "^0.9.0"
packaging = "^23.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
autoflake = "^2.0.0"
mypy = "^0.991"
black = {extras = ["jupyter"], version = "^22.12.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target_version = ['py38']
exclude = '''
(
  /(
    \.git
    | \.pytest_cache
    | venv
    | .venv
    | .cache
    | migrations
  )/
)
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
skip_glob = ["*/migrations/*.py", "*/venv/*", "*/.venv/*", "*/data/*", "*/.cache/*"]